[HTML] Add simple view of first photos

--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -89,6 +89,10 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/config.js"></script>
+        <script src="scripts/services/photosservice.js"></script>
+        <script src="scripts/filters/urlencode.js"></script>
+        <script src="scripts/filters/filesizeformat.js"></script>
         <!-- endbuild -->
 </body>
 </html>
