[HTML] Add filter menu

--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -12,6 +12,7 @@
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
+  <link rel="stylesheet" href="styles/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
 </head>
@@ -79,6 +80,7 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/angular-vs-repeat/src/angular-vs-repeat.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -90,6 +92,7 @@
 <script src="scripts/services/photosservice.js"></script>
 <script src="scripts/filters/urlencode.js"></script>
 <script src="scripts/filters/filesizeformat.js"></script>
+<script src="scripts/directives/resize.js"></script>
 <!-- endbuild -->
 </body>
 </html>
