--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -8,7 +8,7 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -41,8 +41,8 @@
       <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#/">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
+          <li><a href="#/">Home</a></li>
+          <li><a ng-href="#/state">Etat du scan</a></li>
           <li><a ng-href="#/">Contact</a></li>
         </ul>
       </div>
@@ -87,7 +87,7 @@
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
-<script src="scripts/controllers/about.js"></script>
+<script src="scripts/controllers/state.js"></script>
 <script src="scripts/services/config.js"></script>
 <script src="scripts/services/photosservice.js"></script>
 <script src="scripts/filters/urlencode.js"></script>
