[HTML] Add photo modal viewer

--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -93,6 +93,8 @@
 <script src="scripts/filters/urlencode.js"></script>
 <script src="scripts/filters/filesizeformat.js"></script>
 <script src="scripts/directives/resize.js"></script>
+<script src="scripts/controllers/photomodal.js"></script>
+<script src="scripts/services/photomodalservice.js"></script>
 <!-- endbuild -->
 </body>
 </html>
