[HTML] Add resolution sort, add photo details

--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -84,6 +84,8 @@
 <!-- endbower -->
 <!-- endbuild -->
 
+<script src="bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
+
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
@@ -95,6 +97,8 @@
 <script src="scripts/directives/resize.js"></script>
 <script src="scripts/controllers/photomodal.js"></script>
 <script src="scripts/services/photomodalservice.js"></script>
+<script src="scripts/filters/getfilenamefrompath.js"></script>
+<script src="scripts/filters/pxphotoformatnumber.js"></script>
 <!-- endbuild -->
 </body>
 </html>
