--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -8,7 +8,8 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+  <link rel="stylesheet" href="bower_components/angular-snap/angular-snap.css"/>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -22,37 +23,20 @@
   your browser</a> to improve your experience.</p>
 <![endif]-->
 
+
 <!-- Add your site or application content here -->
-<div class="header">
-  <div class="navbar navbar-default" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
+<snap-drawer>
+  <ul class="nav nav-pills nav-stacked">
+    <li><a href="#/">Home</a></li>
+    <li><a ng-href="#/state">Etat du scan</a></li>
+  </ul>
+</snap-drawer>
 
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-
-        <a class="navbar-brand" href="#/">html</a>
-      </div>
-
-      <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-        <ul class="nav navbar-nav">
-          <li><a href="#/">Home</a></li>
-          <li><a ng-href="#/state">Etat du scan</a></li>
-          <li><a ng-href="#/">Contact</a></li>
-        </ul>
-      </div>
-    </div>
+<snap-content snap-opt-disable>
+  <div class="">
+    <div ng-view=""></div>
   </div>
-</div>
-
-<div class="">
-  <div ng-view=""></div>
-</div>
+</snap-content>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 <script>
@@ -81,6 +65,8 @@
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/angular-vs-repeat/src/angular-vs-repeat.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="bower_components/snapjs/snap.js"></script>
+<script src="bower_components/angular-snap/angular-snap.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
