[HTML] Change modal to new state

--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -15,7 +15,7 @@
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="common/styles/bootstrap.min.css">
   <link rel="stylesheet" href="main/css/style.css"/>
-  <link rel="stylesheet" href="main/modal/css/style.css"/>
+  <link rel="stylesheet" href="main/photo/css/style.css"/>
   <link rel="stylesheet" href="state/css/style.css"/>
   <!-- endbuild -->
 </head>
@@ -86,8 +86,9 @@
 <script src="common/filters/urlencode.js"></script>
 <script src="common/lib/angular-locale_fr-fr.js"></script>
 
-<script src="main/modal/service.js"></script>
-<script src="main/modal/ctrl.js"></script>
+<script src="main/photo/service.js"></script>
+<script src="main/photo/ctrl.js"></script>
+<script src="main/photo/module.js"></script>
 <script src="main/module.js"></script>
 <script src="main/service.js"></script>
 <script src="main/ctrl.js"></script>
