--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="bower_components/angular-snap/angular-snap.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <!-- build:css(.tmp) styles/main.css -->
+
+  <!-- build:css(.tmp/styles) styles/main.css -->
   <link rel="stylesheet" href="common/styles/bootstrap.min.css">
   <link rel="stylesheet" href="main/css/style.css"/>
   <link rel="stylesheet" href="main/photo/css/style.css"/>
