[HTML] Improve low speed connection

--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -10,6 +10,7 @@
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/angular-snap/angular-snap.css" />
+  <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css"/>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -71,6 +72,7 @@
 <script src="bower_components/snapjs/snap.js"></script>
 <script src="bower_components/angular-snap/angular-snap.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -87,7 +89,6 @@
 <script src="common/filters/urlencode.js"></script>
 <script src="common/lib/angular-locale_fr-fr.js"></script>
 
-<script src="main/photo/service.js"></script>
 <script src="main/photo/ctrl.js"></script>
 <script src="main/photo/module.js"></script>
 <script src="main/module.js"></script>
