[HTML] Add filter to escape charaters in url in css

--- a/HTML/app/main/photo/view.html
+++ b/HTML/app/main/photo/view.html
@@ -18,7 +18,7 @@
                  height="{{height}}"
                  width="{{width}}"
                  id="photoModal"
-                 style="background-image: url('{{urlThumbnail}}?path={{photo.path | urlEncode}}&height={{photo.heightThumbnail}}'); background-size: 100% 100%;"
+                 style="background-image: url('{{urlThumbnail}}?path={{photo.path | urlEncode | escapeForCssUrl}}&height={{photo.heightThumbnail}}'); background-size: 100% 100%;"
               />
           </a>
         </td>
