--- a/HTML/app/index.html
+++ b/HTML/app/index.html
@@ -83,6 +83,7 @@
 
 <script src="common/constants/config.js"></script>
 <script src="common/directives/resize.js"></script>
+<script src="common/filters/escape-css.js"></script>
 <script src="common/filters/file-size-format.js"></script>
 <script src="common/filters/get-filename-from-path.js"></script>
 <script src="common/filters/px-photo-format-number.js"></script>
